ipc/ipdl/test/ipdl/ok/PmanagedProtocol.ipdl
include protocol PmanagerProtocol;

protocol PmanagedProtocol {
    manager PmanagerProtocol;

child:
    async __delete__();
};
