ipc/ipdl/test/ipdl/error/AsyncCtorReturnsManagee.ipdl
include protocol AsyncCtorReturns;

protocol AsyncCtorReturnsManagee {
  manager AsyncCtorReturns;

parent:
  async __delete__();
};
